--- a/tma/index.html
+++ b/tma/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
-<head>
+<head><script src='//libtl.com/sdk.js' data-zone='10010275' data-sdk='show_10010275'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>میری پہلی TMA</title>
@@ -20,4 +20,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
