--- a/index.html
+++ b/index.html
@@ -375,9 +375,63 @@
             
             <div class="ad-container">
                 <div class="ad-label">You might also like:</div>
-                <a href="https://example.com/game6" class="ad-link" target="_blank">🧩 Match 3 Games</a>
-                <a href="https://example.com/game7" class="ad-link" target="_blank">🏃‍♂️ Action Games</a>
+                <a href="https://otieu.com/4/9981056" class="ad-link" target="_blank">🧩 Match 3 Games</a>
+                <a href="https://otieu.com/4/9981056" class="ad-link" target="_blank">🏃‍♂️ Action Games</a>
             </div>
+show_10010275().then(() => {
+  console.log('User watched the ad');
+}).catch(() => {
+  console.log('Ad failed or was skipped');
+});
+            import createAdHandler from 'monetag-tg-sdk'
+
+const adHandler = createAdHandler(REWARDED_INTERSTITIAL_ZONE_ID)
+
+const ShowAdButton = () => {
+  const onClick = () => {
+    adHandler().then(() => {
+      console.log('User watched the ad')
+    }).catch(() => {
+      console.log('Ad failed or was skipped')
+    })
+  }
+
+  return <button onClick={onClick}>Show Ad</button>
+}
+
+// Rewarded Popup 
+
+show_10010275('pop').then(() => {
+    // user watch ad till the end or close it in interstitial format
+    // your code to reward user for rewarded format
+}).catch(e => {
+    // user get error during playing ad
+    // do nothing or whatever you want
+})
+
+// In-App Interstitial
+
+show_10010275({
+  type: 'inApp',
+  inAppSettings: {
+    frequency: 2,
+    capping: 0.1,
+    interval: 30,
+    timeout: 5,
+    everyPage: false
+  }
+})
+
+/*
+This value is decoded as follows:
+- show automatically 2 ads
+  within 0.1 hours (6 minutes)
+  with a 30-second interval between them
+  and a 5-second delay before the first one is shown.
+  The last digit, 0, means that the session will be saved when you navigate between pages.
+  If you set the last digit as 1, then at any transition between pages,
+  the session will be reset, and the ads will start again.
+*/            
             
             <button onclick="nextLevel()" style="margin-top: 15px;">
                 <span>➡️</span> NEXT LEVEL
@@ -815,3 +869,4 @@
     </script>
 </body>
 </html>
+
