--- a/index.html
+++ b/index.html
@@ -1,77 +1,37 @@
-<!-- index.html -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <script src='//libtl.com/sdk.js' data-zone='10010275' data-sdk='show_10010275'></script>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Telegram Mini Game</title>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<style>
-  #game-container {
-    text-align: center;
-    margin-top: 50px;
-  }
-  #reward-popup {
-    display: none;
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.8);
-    justify-content: center;
-    align-items: center;
-  }
-  #popup-content {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Telegram Mini App</title>
+
+  <!-- ✅ Monetag Ad Script -->
+  <script async src="https://your-monetag-zone-url.js"></script>
+  <!-- replace "your-monetag-zone-url.js" with your actual Monetag script URL -->
+  
+  <style>
+    #adBanner {
+      width: 100%;
+      height: 90px;
+      background: #f0f0f0;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
+      border-radius: 12px;
+    }
+  </style>
 </head>
 <body>
-<div id="game-container">
-  <h1>Mini Game</h1>
-  <button id="play-btn">Play</button>
-</div>
+  <div id="app">
+    <!-- Your app content here -->
+    <h2>Welcome to my Telegram Mini App!</h2>
 
-<!-- Reward Popup -->
-<div id="10010275">
-  <div id="popup-content">
-    <h2>Congratulations!</h2>
-    <p>You won 10 coins!</p>
-    <button id="close-popup">Close</button>
+    <!-- Ad container -->
+    <div id="adBanner">Loading Ad...</div>
   </div>
-</div>
 
-<script>
-  const tg = window.Telegram.WebApp;
-
-  // Example game logic
-  document.getElementById('play-btn').onclick = () => {
-    // Simulate game result
-    const wonReward = Math.random() > 0.5; // 50% chance to win
-
-    if (wonReward) {
-      showRewardPopup();
-    } else {
-      alert('Try again!');
-    }
-  };
-
-  function showRewardPopup() {
-    document.getElementById('reward-popup').style.display = 'flex';
-  }
-
-  document.getElementById('close-popup').onclick = () => {
-    document.getElementById('10010275').style.display = 'none';
-
-    // Send reward info back to bot (optional)
-    tg.sendData(JSON.stringify({ reward: 10 }));
-  };
-
-  // Send data to bot when the user closes the popup with reward
-  tg.onEvent('mainButtonClicked', () => {
-    // handle main button click if needed
-  });
-</script>
+  <script src="ads.js"></script>
 </body>
 </html>
