--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Telegram Web App with Monetag</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- Real Monetag SDK -->
-    <script src="https://sdk.monetag.com/?id=YOUR_PUBLISHER_ID"></script>
+    <script <script src='//libtl.com/sdk.js' data-zone='10081114'=3083125"></script>
     <style>
         * {
             margin: 0;
@@ -245,7 +245,7 @@
             <div class="monetization-info">
                 <h3>💰 Monetization Active</h3>
                 <p>This app displays ads through the Monetag SDK to generate revenue while keeping the service free for users.</p>
-                <p><strong>Publisher ID:</strong> <span id="publisher-id">YOUR_PUBLISHER_ID</span></p>
+                <p><strong>3083125:</strong> <span id="publisher-id">3083125</span></p>
             </div>
             
             <div class="ad-container">
@@ -306,7 +306,7 @@
         
         <footer>
             <p>Telegram Web App with Monetag Integration</p>
-            <p>Real implementation with actual Monetag SDK | Publisher ID required</p>
+            <p>Real implementation with actual Monetag SDK | 3083125</p>
         </footer>
     </div>
 
@@ -442,3 +442,4 @@
     </script>
 </body>
 </html>
+
